<resources>
    <!-- Strings générals -->
    <string name="app_name">Projet intégrateur - Utopia Mobile</string>
    <string name="utopia_title">Banque Utopia</string>
    <string name="undefinedLabel">Undefined</string>
    <string name="soumettre">Soumettre</string>
    <string name="confirmer">Confirmer</string>
    <string name="annuler">Annuler</string>
    <string name="continuer">Continuer</string>
    <string name="retour">Retour</string>
    <string name="attentionAlert">Attention - action requise pour continuer</string>
    <string name="raison">Raison</string>
    <string name="precision">Précision</string>
    <string name="compte">Compte</string>
    <string name="connexionFailedMessage">Vous n\u2019êtes pas connecté à internet. Veuillez vous connecter à internet pour effectuer cette action.</string>

    <!-- Profil général -->
    <string name="courrielLabel">Courriel</string>
    <string name="mdpLabel">Mot de passe</string>

    <string name="contactLabel">Informations de contact</string>
    <string name="nomLabel">Nom</string>
    <string name="prenomLabel">Prénom</string>
    <string name="telephoneLabel">Téléphone</string>

    <string name="adresseLabel">Adresse</string>
    <string name="noCiviqueLabel">No. Civique</string>
    <string name="noPorteLabel">No. Porte</string>
    <string name="rueLabel">Rue</string>
    <string name="villeLabel">Ville</string>
    <string name="codePostalLabel">Code postal</string>

    <!-- Connexion -->
    <string name="connexionTitle">Connexion</string>
    <string name="connexionButtonLabel">Se connecter</string>
    <string name="forgotPasswordLink"><a href="http://10.0.2.2:8000/forgot-password">Mot de passe oublié?</a></string>
    <string name="userHasNoAccess">Vous n\u2019avez pas accès à l\u2019application. Seuls les utilisateurs et les employés ayant un accès utilisateur peuvent utiliser l\u2019application</string>
    <string name="erreurChargementUser">Erreur lors du chargement de l\u2019utilisateur.</string>

    <!-- Détails de profil -->
    <string name="detailsProfileTitle">Mon profil</string>
    <string name="resourceNotLoaded">Les ressources pour le profil sont en cours de chargement. Veuillez réessayer plus tard.</string>

    <!-- Modification de profil -->
    <string name="modificationProfileTitle">Modifier mon profil</string>
    <string name="modificationMotDePasseLabel">Changer mon mot de passe</string>
    <string name="confirmationEtMotDePasse">Confirmation et mot de passe</string>
    <string name="selectionVille">Sélection de la ville</string>
    <string name="rechercheVille">Rechercher la ville...</string>
    <string name="succesConfirmationEditProfil">Profil changé avec succès</string>
    <string name="confirmationContinuationVersMDPLabel">Vos changements ne seront pas enregistrés si vous continuer. Assurez vous d\u2019enregistrer les changements s\u2019il y a lieu</string>

    <!-- Mot de passe -->
    <string name="modificationMDPTitle">Changement de mot de passe</string>
    <string name="ancienMDP">Ancien mot de passe</string>
    <string name="nouveauMDP">Nouveau mot de passe</string>
    <string name="confirmationMDP">Confirmation du mot de passe</string>
    <string name="succèsConfirmationMDP">Mot de passe changé avec succès</string>

    <!-- Comptes bancaires -->
    <string name="comptesTitle">Mes comptes</string>
    <string name="nom_de_compte_par_defaut">Nom de compte</string>
    <string name="solde_compte">Solde : </string>
    <string name="derniere_activite_compte">Dernière activité : %s</string>
    <string name="solde_valeur">%s $</string>
    <string name="newName">Entrer le nom du nouveau compte :</string>
    <string name="ajouter_un_compte">Ajouter un compte</string>
    <string name="ajouterButton">Ajouter</string>
    <string name="modifierCompte">Modifier le nom \n d\'un compte</string>
    <string name="editCompteNom">Entrer le nouveau du compte:</string>
    <string name="modifier">Modifier</string>
    <string name="titlePret">Mes prêts</string>
    <string name="taux_text">Taux d\'intérêt:</string>
    <string name="taux_par_defaut">taux_par_defaut</string>
    <string name="titleCredit">Mes crédits</string>

    <!-- Acceuil -->
    <string name="acceuilTitle">Bonjour</string>
    <string name="compteTitle">Résumé des comptes</string>
    <string name="voirPlus">Voir plus</string>
    <string name="compteName1">Compte chèque</string>
    <string name="soldeCompte1">500 $</string>
    <string name="compteName2">Compte épargne</string>
    <string name="soldeCompte2">1000 $</string>

    <string name="annonceTitle">Annonce</string>
    <string name="annonceName">Annonce</string>
    <string name="annonceDescription">Créer un compte REER à 1% de taux d\u2019intérêt.</string>
    <string name="annonceDate">09/10/2024</string>

    <string name="carteTitle">Carte de crédit</string>
    <string name="nameCarte">Visa XXXX</string>
    <string name="montantCarte">500 $</string>
    <string name="limiteCarte">Limite de crédit : 2500 $</string>
    <string name="dateCarte">Paiement minimum 12 $ exigible le 30/10/2024</string>
    <string name="btnPaiement">Payer maintenant</string>
    <string name="btndDemande">Nouvelle demande</string>


    <!-- Transactions -->
    <string name="transactionTitle">Transaction</string>
    <string name="transactionsTitle">Mes transactions</string>
    <string name="createNewTransaction">Nouvelle transaction</string>
    <string name="cancelTransaction">Annuler une transaction</string>
    <string name="dateTransaction">10/10/2024</string>
    <string name="descriptionTransaction">Dépôt de 2000$ depuis compte desjardins</string>
    <string name="raisonTransaction">Raison de l\u2019annulation</string>
    <string name="titleTypeTransaction">Type : </string>
    <string name="typeTransaction">Virement </string>
    <string name="etatTransaction">Status : En cours </string>
    <string name="titleMontantTransaction">Montant : </string>
    <string name="montantTransaction">Montant : 800 $</string>
    <string name="destinationTransaction">Vers : </string>
    <string name="checkVerificationTransaction">Les informations sont exactes </string>
    <string name="valideTransaction">Terminer </string>
    <string name="retourTransaction">Retour </string>
    <string name="stopTransaction">Annuler </string>
    <string name="confirmCancel">Confirmer </string>
    <string name="textErrorTransaction">Désolé, il y a aucune transaction pour ce compte.</string>
    <string name="aPayer">A payer : </string>
    <string name="transactionLoading">Traitement en cours ... </string>
    <string name="titleStatusTransaction">Votre Transaction à été effectuée avec succès. </string>

    <string-array name="transactionType">
        <item>Dépôt</item>
        <item>Rétrait</item>
        <item>Virement</item>
    </string-array>

    <!-- Virements -->
    <string name="VirementTitle">Virement</string>

    <!-- facture-->
    <string name="ongletfactureTitle">Paiement de facture</string>
    <string name="factureTitle">Facture</string>
    <string name="factureCreateTitle">Payer une facture</string>
    <string name="fournisseur">Fournisseur</string>
    <string name="nomFacture">Nom de la facture : </string>
    <string name="descriptionFacture">Description : </string>
    <string name="montantFacture">Montant : </string>
    <string name="jourFacture">Jours du mois : </string>
    <string name="btnPayerFacture">Payer</string>
    <string name="btnAnnulerFacture">Annuler</string>


    <!-- demandes de prêt -->
    <string name="titleDemandePret">Mes demandes de prêt</string>
    <string name="date_par_defaut">date par défaut</string>
    <string name="statut">Statut :</string>
    <string name="statut_par_defaut">statut par défaut</string>
    <string name="montant_demande_pret">Montant: %s $</string>
    <string name="duree_demande_pret">Durée : %s mois</string>
    <string name="ajoutDemande">Ajouter une \ndemande de prêt</string>
    <string name="entrerRaisonText">Entrer la raison de la demande:</string>
    <string name="montantDemande">Entrer le montant à emprunter:</string>
    <string name="raison_par_defaut">raison_par_defaut</string>


    <!-- Désactivation de compte bancaire -->
    <string name="titleDesactivationCompte">Désactivation de compte bancaire</string>
    <string name="succèsEnvoiDesactivation">Votre demande de désactivation de compte a été envoyée</string>
    <string-array name="raisonsDesactivation">
        <item>Compte inutile / non utilisé</item>
        <item>Changement vers un autre compte</item>
        <item>Changement de banque</item>
        <item>Autre</item>
    </string-array>

    <!-- Désactivation de compte utilisateur -->
    <string name="titleDesactivationProfil">Désactivation de son profil</string>
    <string name="succèsEnvoiDesactivationProfil">Votre demande de désactivation de compte utilisateur a été envoyée</string>
    <string-array name="raisonsDesactivationProfil">
        <item>Profil inutile / non utilisé</item>
        <item>Changement vers une autre banque</item>
        <item>Changement de pays</item>
        <item>Ouverture de nouveau profil</item>
        <item>Autre</item>
    </string-array>

    <!-- Messagerie -->
    <string name="titreConversations">Vos conversations</string>
    <string name="vous">Vous</string>
    <string name="envoyer">Envoyer</string>
    <string name="entrezMessage">Votre message</string>
    <string name="erreur255">Votre message ne peut pas dépasser 255 caractères.</string>
    <string name="erreurVide">Veuillez entrer un message.</string>
    <string name="erreurEnvoi">Erreur à l\'envoi du message.</string>
    <string name="erreurModif">Erreur à la modification du message.</string>
    <string name="permissionCameraRequise">La permission de la caméra est requise pour utiliser la caméra.</string>
    <string name="permissionNotifRequise">La permission des notifications est requise pour utiliser la messagerie.</string>
    <string name="conversationAvec">Conversation avec</string>
    <string name="conversationVide">Conversation vide</string>

    <!-- Plus -->
    <string name="plus">Plus</string>
    <string name="onglet_demande_pret">Demandes de prêt</string>

</resources>