<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_demandePret_row"
    android:layout_width="350dp"
    android:layout_gravity="center_horizontal"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@drawable/bordure_row">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textDateDemandePret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/date_par_defaut" />

        <TextView
            android:id="@+id/textStatutDemandePret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/statut" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/textMontantDemandePret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:text="@string/montant_demande_pret" />

        <TextView
            android:id="@+id/textStatutValeurDemandePret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/statut_par_defaut" />

    </LinearLayout>

    <TextView
        android:id="@+id/textDureeDemandePret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        android:text="@string/duree_demande_pret" />

</LinearLayout>