<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_compte_row"
    android:layout_width="350dp"
    android:layout_gravity="center_horizontal"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="15dp"
    android:background="@drawable/bordure_row">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textNomCompte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"
            android:text="@string/nom_de_compte_par_defaut" />

        <ImageView
            android:id="@+id/editCompte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ecrire" />

        <TextView
            android:id="@+id/textSoldeCompte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="18sp"
            android:text="@string/solde_compte" />

        <TextView
            android:id="@+id/textSoldeValeurCompte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textColor="@color/utopia_turquoise_moyen"
            android:text="@string/solde_valeur" />
    </LinearLayout>

    <TextView
        android:id="@+id/textDerAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        android:text="@string/derniere_activite_compte" />
</LinearLayout>